Crear tablas en nuestro sitio

--- a/css/invie.css
+++ b/css/invie.css
@@ -154,6 +154,26 @@ body{
 	margin-top: 10px;
 }
 
+table{
+	width: 100%;
+}
+
+th{
+	background: #273b47;
+	color: white;
+	padding: 10px 20px;
+	text-align: left;
+}
+
+td{
+	padding: 20px;
+}
+
+table, th, td{
+	border: 1px solid #273b47;
+	border-collapse: collapse;
+}
+
 .titulo {
 	font-size: 70px;
 	font-family: 'montserrat', sans-serif;
