Agregando videos de manera responsive

--- a/css/invie.css
+++ b/css/invie.css
@@ -72,6 +72,10 @@ table, th, td{
 	border-collapse: collapse;
 }
 
+video{
+  width: 100%;
+}
+
 .background{
 	background-image: url('../images/background.png');
 	background-size: cover;
@@ -299,6 +303,19 @@ table, th, td{
 	margin-bottom: 20px;
 }
 
+.video-responsive-contenedor{
+  position: relative;
+  padding-top: 56.25%;
+}
+.video-responsive-src {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+}
 
 @media screen and (max-width: 800px){
 
